Verifying some run.sh scripts in testsuite